tungsten: revert trajectory stitching + fix trailing spam
Revert trajectory stitching — inertia nodes broke first path emission
by predicting positions in walls/air, making A* unable to find paths.
Needs more careful implementation (only when already moving, not on
first emit).

Fix trailing log spam when enableTrailing=false — wrap trail.update()
and trail.recordPosition() in the enableTrailing check. Previously
only the waypoint usage was gated, but the state machine still ran
and logged.